--- a/site/config.toml
+++ b/site/config.toml
@@ -2,6 +2,8 @@ baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
 title = "Homepage"
+theme = "whiteplain"
+
 
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details: 
